# Telegram2Elastic

./: CHANGELOG.md  README.md  config.sample.yml  requirements.txt  telegram2elastic.py  test_telegram2elastic.py
poc/: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
poc/alembic/: env.py
poc/alembic/versions/: 15e9cd5477d0_initial_schema_with_semantic_enrichment.py  a9cb3331fe33_add_unique_constraint_on_archive_id_and_.py
poc/docs/: PRODUCTION_ARCHITECTURE.md
poc/scripts/: create_session.py
poc/src/: __init__.py  __main__.py
poc/src/api/: __init__.py  database.py  main.py  models.py
poc/src/api/routes/: __init__.py  health.py  search.py
poc/src/core/: __init__.py  config.py  models.py  telegram_client.py
poc/src/enrichment/: __init__.py  entity_extractor.py  llm_classifier.py
poc/src/storage/: __init__.py  s3_client.py
poc/tests/: test_api.py  test_config.py  test_entity_extractor.py  test_llm_classifier.py  test_s3_client.py  test_telegram_client.py
